--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
+    "dompurify": "^3.2.6",
+    "framer-motion": "^12.15.0",
     "html-react-parser": "^3.0.9",
+    "jwt-check-expiration": "^1.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
